--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,14 @@
-name: Run Telegram Bot
+name: Persistent Bot
 
 on:
   push:
     branches:
-      - main  # اجرا هنگام push به شاخه main
-  workflow_dispatch:  # امکان اجرای دستی در GitHub Actions
+      - main
+  workflow_dispatch:
+  workflow_run:
+    workflows: ["Persistent Bot"]
+    types:
+      - completed
 
 jobs:
   run-bot:
@@ -12,12 +16,12 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3  # دریافت کدهای پروژه
+        uses: actions/checkout@v3
 
       - name: Install Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'  # نصب نسخه ۳.۱۰ پایتون
+          python-version: '3.12'
 
       - name: Install Dependencies
         run: |
@@ -25,4 +29,9 @@ jobs:
           pip install python-telegram-bot
 
       - name: Run Bot
-        run: python main.py  # اجرای فایل اصلی بات تلگرام
+        run: python main.py
+
+      - name: Restart Workflow
+        if: always()
+        run: gh workflow run main.yml
+   
