--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: Run Telegram Bot
 
 on:
+  schedule:
+    - cron: "*/15 * * * *"  # هر 15 دقیقه یک بار اجرا می‌شود
   push:
     branches:
       - main  # اجرا هنگام push به شاخه main
