--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ on:
       - main  # اجرا هنگام push به شاخه main
   workflow_dispatch:  # امکان اجرای دستی در GitHub Actions
 
+concurrency:
+  group: telegram-bot
+  cancel-in-progress: true  # اگر job قبلی هنوز در حال اجراست، آن را متوقف کن
+
 jobs:
   run-bot:
     runs-on: ubuntu-latest
@@ -19,7 +23,7 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.13'  # نصب نسخه ۳.۱۰ پایتون
+          python-version: '3.13'  # نسخه صحیح پایتون (۳.۱۳ هنوز پایدار نیست)
 
       - name: Install Dependencies
         run: |
